test/functions/dinan/inconsistent_return_type.good
recursive_return_oops-2.chpl:1: error: Unable to resolve return type

